<resources>
    <string name="app_name">App Santa Mãe de Deus</string>
    <string name="digite_email">Digite seu e-mail</string>
    <string name="digite_senha">Digite sua senha</string>
    <string name="botao_logar">Logar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="title_activity_menu_igreja">MenuIgreja</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_calendar">Calendário</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_musicas">Músicas</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_mapa">Como Chegar</string>
    <string name="menu_sair">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paroquia_santa">Paróquia Santa Mãe de Deus</string>
    <string name="title_activity_localizaca">Map</string>
    <string name="selecione_data">Selecione sua data</string>
    <string name="sel_imagem">Imagem</string>
    <string name="salvar">Salvar</string>

    <string-array name="sp_hora_inicial">
        <item>00:00 </item>
        <item>01:00 </item>
        <item>02:00 </item>
        <item>03:00 </item>
        <item>04:00 </item>
        <item>05:00 </item>
        <item>06:00 </item>
        <item>07:00 </item>
        <item>08:00 </item>
        <item>09:00 </item>
        <item>10:00 </item>
        <item>11:00 </item>
        <item>12:00 </item>
        <item>13:00 </item>
        <item>14:00 </item>
        <item>15:00 </item>
        <item>16:00 </item>
        <item>17:00 </item>
        <item>18:00 </item>
        <item>19:00 </item>
        <item>20:00 </item>
        <item>21:00 </item>
        <item>22:00 </item>
        <item>23:00 </item>
    </string-array>

    <string-array name="sp_hora_final">
        <item>00:00 </item>
        <item>01:00 </item>
        <item>02:00 </item>
        <item>03:00 </item>
        <item>04:00 </item>
        <item>05:00 </item>
        <item>06:00 </item>
        <item>07:00 </item>
        <item>08:00 </item>
        <item>09:00 </item>
        <item>10:00 </item>
        <item>11:00 </item>
        <item>12:00 </item>
        <item>13:00 </item>
        <item>14:00 </item>
        <item>15:00 </item>
        <item>16:00 </item>
        <item>17:00 </item>
        <item>18:00 </item>
        <item>19:00 </item>
        <item>20:00 </item>
        <item>21:00 </item>
        <item>22:00 </item>
        <item>23:00 </item>
    </string-array>

    <string-array name="sp_departamentos">
        <item>Ministério de Louvor </item>
        <item>Tesouraria </item>
        <item>Missões </item>
        <item>Noite da Vitória </item>
        <item>Mocidade </item>
        <item>Adolescentes </item>
        <item>Cantina </item>
        <item>Obreiro </item>
        <item>Conjunto Emanuel </item>
        <item>Conjunto Betuel </item>
    </string-array>





</resources>
