<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calendario"
            android:icon="@drawable/ic_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_agenda"
            android:icon="@drawable/ic_agenda"
            android:title="@string/menu_agenda" />
        <item
            android:id="@+id/nav_musicas"
            android:icon="@drawable/ic_library_music"
            android:title="@string/menu_musicas" />

    </group>

    <item android:title="Perfil">
        <menu>
            <item
                android:id="@+id/nav_perfil"
                android:icon="@drawable/ic_perfil"
                android:title="@string/menu_perfil" />
            <item
                android:id="@+id/nav_mapa"
                android:icon="@drawable/ic_location"
                android:title="@string/menu_mapa" />
            <item
                android:id="@+id/nav_sair"
                android:icon="@drawable/ic_sair"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
